// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SText > should render 1`] = `
<span
  class=""
>
  Hello
</span>
`;

exports[`SText > should render size: 'lg' 1`] = `
<span
  class="text-lg py-.5 px-1.5 rd-1"
  size="lg"
>
  Hello
</span>
`;

exports[`SText > should render size: 'md' 1`] = `
<span
  class="text-base py-.5 px-1.5 rd-1"
  size="md"
>
  Hello
</span>
`;

exports[`SText > should render size: 'sm' 1`] = `
<span
  class="text-sm py-.5 px-1.5 rd-1"
  size="sm"
>
  Hello
</span>
`;
